# feeluown-ytmusic

./: .gitignore  AGENTS.md  README.md  fuo_ytmusic.py  pyproject.toml  setup.py  test.py
.github/workflows/: ci-tests.yml  pypi-release.yml
feeluown_ytmusic/: consts.py  models.py  provider.py  service.py  timeparse.py
fuo_ytmusic/: __init__.py  cipher.py  consts.py  headerfile.py  home_recommendation.py  language.py  models.py  page_explore.py  page_explore_qml.py  page_fav.py  page_more.py  patch.py  profile.py  provider.py  provider_ui.py  qt_compat.py  service.py  timeparse.py  ui.py
fuo_ytmusic/locales/: __init__.py
fuo_ytmusic/locales/en-US/: provider.ftl
fuo_ytmusic/locales/ja-JP/: provider.ftl
fuo_ytmusic/locales/zh-CN/: provider.ftl
fuo_ytmusic/qml/: page_explore.qml  uploader.qml
fuo_ytmusic/qml/dummydata/: explore_backend.qml
manual_tests/: capture_model_field_fixtures.py  conftest.py  media_cookiefile_stress_test.py  profile_switch_test.py
tests/: test_consts.py  test_feeluown_ytmusic.py  test_headerfile.py  test_helpers.py  test_language.py  test_models_fields.py  test_profile.py  test_provider_media.py  test_provider_song_get.py  test_recommendation.py  test_service.py  test_timeparse.py  test_toplist.py
tests/fixtures/: account_menu.json  account_switcher.json  account_switcher_multi_runs.json  get_home.json  model_fields_artist_video_item.json  model_fields_artist_video_item_zh.json  model_fields_get_album_ep.json  model_fields_get_album_single.json  model_fields_get_artist.json  model_fields_get_song.json  model_fields_get_song_xqoantj5pny.json
