[tool.poetry]
name = "fuo-ytmusic"
version = "0.1.0"
description = "feeluown Youtube Music plugin"
authors = ["Bruce Zhang <zttt183525594@gmail.com>"]
keywords = ["feeluown", "ytmusic", "youtube"]
homepage = "https://github.com/BruceZhang1993/feeluown-ytmusic"
readme = "README.md"
include = ["fuo_ytmusic/assets/*.svg"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
feeluown = ">=3.7.13"
ytmusicapi = "*"
pydantic = "*"
cachetools = "*"
youtube_dl = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
poetry2setup = "*"
types-cachetools = '*'
PyQt5 = "^5.15.6"
ipython = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."fuo.plugins_v1"]
"ytmusic" = "fuo_ytmusic"
