[tool.poetry]
name = "fuo-ytmusic"
version = "0.3.2"
description = "feeluown Youtube Music plugin"
authors = ["Bruce Zhang <zttt183525594@gmail.com>"]
keywords = ["feeluown", "ytmusic", "youtube"]
homepage = "https://github.com/feeluown/feeluown-ytmusic"
readme = "README.md"
include = ["fuo_ytmusic/assets/*.svg", "fuo_ytmusic/qml/*.qml"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
feeluown = ">=3.8.12"
ytmusicapi = "*"
pydantic = "*"
cachetools = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
poetry2setup = "*"
types-cachetools = '*'
PyQt5 = "^5.15.6"
ipython = "*"
PyQtWebEngine = "^5.15.5"
fuo-netease = "^0.8"
fuo-kuwo = "^0.1.5"
fuo-qqmusic = "^0.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."fuo.plugins_v1"]
"ytmusic" = "fuo_ytmusic"
