[project]
name = "fuo-ytmusic"
version = "0.4.14"
description = "feeluown Youtube Music plugin"
readme = "README.md"
requires-python = ">=3.8,<4.0"
license = { file = "LICENSE.txt" }
authors = [{ name = "Bruce Zhang", email = "zttt183525594@gmail.com" }]
keywords = ["feeluown", "ytmusic", "youtube"]
dependencies = [
  "feeluown>=3.8.12",
  "ytmusicapi",
  "pydantic>=2.0,<3.0",
  "cachetools",
  "yt-dlp",
]

[project.urls]
Homepage = "https://github.com/feeluown/feeluown-ytmusic"
Repository = "https://github.com/feeluown/feeluown-ytmusic"

[project.entry-points."fuo.plugins_v1"]
ytmusic = "fuo_ytmusic"

[dependency-groups]
dev = [
  "pytest",
  "types-cachetools",
  "feeluown[qt,webengine]",
]

[tool.uv]
default-groups = ["dev"]

[tool.setuptools]
packages = ["fuo_ytmusic"]

[tool.setuptools.package-data]
fuo_ytmusic = ["assets/*.svg", "qml/*.qml", "qml/dummydata/*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
